fixed tab error on pages without tab content, fixed toggle alignment on mobile menu

--- a/wp-content/themes/ddp-refresh/css/sass/partials/_theme-footer.scss
+++ b/wp-content/themes/ddp-refresh/css/sass/partials/_theme-footer.scss
@@ -103,6 +103,10 @@
 
 .newsletter-signup-form {
   max-width: 350px;
+
+  .form__input {
+    max-height: 36px;
+  }
 }
 
 .footer--main__content__link {
