--- a/wp-content/themes/ddp-refresh/css/sass/partials/_theme-forms.scss
+++ b/wp-content/themes/ddp-refresh/css/sass/partials/_theme-forms.scss
@@ -7,9 +7,9 @@
   border: none;
   border-radius: 0;
 
-  @media only screen and (-webkit-min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 3) {
-    padding: 10px 10px 9px;
-  }
+  // @media only screen and (-webkit-min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 3) {
+  //   padding: 10px 10px 9px;
+  // }
 }
 
 .form--single-input {
