--- a/wp-content/themes/ddp-refresh/css/sass/partials/_theme-header.scss
+++ b/wp-content/themes/ddp-refresh/css/sass/partials/_theme-header.scss
@@ -98,7 +98,7 @@
     position: absolute;
     right: (45/825)*100%;
     width: 100%;
-    max-width: 400px;
+    max-width: 415px;
     background-color: white;
     border-top: solid 1px $color-alt-7;
     margin: 0 #{-(45/825)*100%};
